--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "require": {
         "php": ">=7.4.0",
         "ext-ffi": "*",
-        "toknot/ffi-extend" : "dev-master"
+        "toknot/ffi-extend" : ">=v0.1-beta1"
     },
     "autoload": {
         "psr-4": {
