--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "require": {
         "php": ">=7.4.0",
         "ext-ffi": "*",
-        "toknot/ffi-extend" : ">=v0.1.4-alpha"
+        "toknot/ffi-extend" : ">=v0.1.4"
     },
     "autoload": {
         "psr-4": {
